// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutComponents FormHeading should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-heading mockClassName"
      >
        <div>
          mockChildren
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-heading mockClassName"
    >
      <div>
        mockChildren
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`LayoutComponents FormSection should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-section mockClassName"
      >
        <div>
          mockChildren
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-section mockClassName"
    >
      <div>
        mockChildren
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`LayoutComponents FormSubHeading should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-subheading mockClassName"
      >
        <div>
          mockChildren
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-subheading mockClassName"
    >
      <div>
        mockChildren
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`LayoutComponents should match a snapshot for an example form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container-flex has-background has-padding"
      >
        <form
          action="#"
          class="form"
        >
          <div
            class="columns"
            data-test=""
          >
            <div
              class="column"
              data-test=""
            >
              <div
                class="form-section"
              >
                <div
                  class="form-heading"
                >
                  Section One
                </div>
                <div
                  class="form-subheading"
                >
                  Information about this section to help the user
                </div>
                <div
                  class="field"
                >
                  <div
                    class="control "
                  >
                    <label
                      class="label inline-block "
                      for="text-1-section-1"
                    >
                      Text
                    </label>
                    <input
                      class="input is-primary"
                      data-test=""
                      id="text-1-section-1"
                      name="text-1-section-1"
                      placeholder="Some text here"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="field"
                >
                  <div
                    class="control "
                  >
                    <label
                      class="label inline-block "
                      for="email"
                    >
                      Email
                    </label>
                    <input
                      class="input is-primary"
                      data-test=""
                      id="email"
                      name="email"
                      placeholder="bob@acme.com"
                      type="email"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="field"
                >
                  <div
                    class="control "
                  >
                    <label
                      class="label inline-block "
                      for="tel"
                    >
                      Telephone
                    </label>
                    <input
                      class="input is-primary"
                      data-test=""
                      id="tel"
                      name="tel"
                      placeholder="0800 800 800"
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-section"
              >
                <div
                  class="form-heading"
                >
                  Section Two
                </div>
                <div
                  class="form-subheading"
                >
                  Information about this section to help the user
                </div>
                <div
                  class="field"
                >
                  <div
                    class="control "
                  >
                    <label
                      class="label inline-block "
                      for="password"
                    >
                      Password
                    </label>
                    <input
                      class="input is-primary"
                      data-test=""
                      id="password"
                      name="password"
                      placeholder="********"
                      type="password"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="field"
                >
                  <div
                    class="control "
                  >
                    <label
                      class="label inline-block "
                      for="passwordConfirm"
                    >
                      Password Confirm
                    </label>
                    <input
                      class="input is-primary"
                      data-test=""
                      id="passwordConfirm"
                      name="passwordConfirm"
                      placeholder="********"
                      type="password"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="column"
              data-test=""
            >
              <div
                class="form-section"
              >
                <div
                  class="form-heading"
                >
                  Section Three
                </div>
                <div
                  class="form-subheading"
                >
                  Information about this section to help the user
                </div>
                <div
                  class="field"
                >
                  <div
                    class="control "
                  >
                    <label
                      class="label inline-block "
                      for="text-1-section-3"
                    >
                      Text
                    </label>
                    <input
                      class="input is-primary"
                      data-test=""
                      id="text-1-section-3"
                      name="text-1-section-3"
                      placeholder="Some text here"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="control"
                >
                  <label
                    class="label"
                  >
                    Label for editor
                  </label>
                  <div
                    class="pell undefined "
                    data-test=""
                  >
                    <div
                      class="pell-actionbar"
                    >
                      <button
                        class="pell-button"
                        title="Bold"
                        type="button"
                      >
                        <b>
                          B
                        </b>
                      </button>
                      <button
                        class="pell-button"
                        title="Italic"
                        type="button"
                      >
                        <i>
                          I
                        </i>
                      </button>
                      <button
                        class="pell-button"
                        title="Underline"
                        type="button"
                      >
                        <u>
                          U
                        </u>
                      </button>
                      <button
                        class="pell-button"
                        title="Strike-through"
                        type="button"
                      >
                        <strike>
                          S
                        </strike>
                      </button>
                      <button
                        class="pell-button"
                        title="Heading 1"
                        type="button"
                      >
                        <b>
                          H
                          <sub>
                            1
                          </sub>
                        </b>
                      </button>
                      <button
                        class="pell-button"
                        title="Heading 2"
                        type="button"
                      >
                        <b>
                          H
                          <sub>
                            2
                          </sub>
                        </b>
                      </button>
                      <button
                        class="pell-button"
                        title="Paragraph"
                        type="button"
                      >
                        ¶
                      </button>
                      <button
                        class="pell-button"
                        title="Quote"
                        type="button"
                      >
                        “ ”
                      </button>
                      <button
                        class="pell-button"
                        title="Ordered List"
                        type="button"
                      >
                        #
                      </button>
                      <button
                        class="pell-button"
                        title="Unordered List"
                        type="button"
                      >
                        •
                      </button>
                      <button
                        class="pell-button"
                        title="Code"
                        type="button"
                      >
                        &lt;/&gt;
                      </button>
                      <button
                        class="pell-button"
                        title="Horizontal Line"
                        type="button"
                      >
                        ―
                      </button>
                      <button
                        class="pell-button"
                        title="Link"
                        type="button"
                      >
                        🔗
                      </button>
                    </div>
                    <div
                      class="pell-content"
                      placeholder="Some text here"
                    />
                  </div>
                </div>
              </div>
              <div
                class="form-section"
              >
                <div
                  class="form-heading"
                >
                  Section Four
                </div>
                <div
                  class="form-subheading"
                >
                  Information about this section to help the user
                </div>
                <div
                  class="field"
                >
                  <div
                    class="control"
                  >
                    <label
                      class="label mb-2"
                      for="text"
                    >
                      Details
                    </label>
                    <textarea
                      class="textarea is-primary"
                      data-test=""
                      id="text"
                      name="primary"
                      placeholder="Some text here"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="form-heading"
          >
            Section Five
          </div>
          <div
            class="columns"
            data-test=""
          >
            <div
              class="column"
              data-test=""
            >
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission1"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission1"
                    >
                      Permission1
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission5"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission5"
                    >
                      Permission5
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="column"
              data-test=""
            >
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission2"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission2"
                    >
                      Permission2
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission6"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission6"
                    >
                      Permission6
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="column"
              data-test=""
            >
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission3"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission3"
                    >
                      Permission3
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission7"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission7"
                    >
                      Permission7
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="column"
              data-test=""
            >
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission4"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission4"
                    >
                      Permission4
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="field "
              >
                <div
                  class="control"
                >
                  <div
                    class="field field-checkbox"
                  >
                    <input
                      class="checkbox"
                      data-test=""
                      id="Permission8"
                      type="checkbox"
                      value=""
                    />
                    <label
                      class="label"
                      for="Permission8"
                    >
                      Permission8
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
        <div
          class="form-section"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container-flex has-background has-padding"
    >
      <form
        action="#"
        class="form"
      >
        <div
          class="columns"
          data-test=""
        >
          <div
            class="column"
            data-test=""
          >
            <div
              class="form-section"
            >
              <div
                class="form-heading"
              >
                Section One
              </div>
              <div
                class="form-subheading"
              >
                Information about this section to help the user
              </div>
              <div
                class="field"
              >
                <div
                  class="control "
                >
                  <label
                    class="label inline-block "
                    for="text-1-section-1"
                  >
                    Text
                  </label>
                  <input
                    class="input is-primary"
                    data-test=""
                    id="text-1-section-1"
                    name="text-1-section-1"
                    placeholder="Some text here"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="control "
                >
                  <label
                    class="label inline-block "
                    for="email"
                  >
                    Email
                  </label>
                  <input
                    class="input is-primary"
                    data-test=""
                    id="email"
                    name="email"
                    placeholder="bob@acme.com"
                    type="email"
                    value=""
                  />
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="control "
                >
                  <label
                    class="label inline-block "
                    for="tel"
                  >
                    Telephone
                  </label>
                  <input
                    class="input is-primary"
                    data-test=""
                    id="tel"
                    name="tel"
                    placeholder="0800 800 800"
                    type="tel"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="form-section"
            >
              <div
                class="form-heading"
              >
                Section Two
              </div>
              <div
                class="form-subheading"
              >
                Information about this section to help the user
              </div>
              <div
                class="field"
              >
                <div
                  class="control "
                >
                  <label
                    class="label inline-block "
                    for="password"
                  >
                    Password
                  </label>
                  <input
                    class="input is-primary"
                    data-test=""
                    id="password"
                    name="password"
                    placeholder="********"
                    type="password"
                    value=""
                  />
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="control "
                >
                  <label
                    class="label inline-block "
                    for="passwordConfirm"
                  >
                    Password Confirm
                  </label>
                  <input
                    class="input is-primary"
                    data-test=""
                    id="passwordConfirm"
                    name="passwordConfirm"
                    placeholder="********"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="column"
            data-test=""
          >
            <div
              class="form-section"
            >
              <div
                class="form-heading"
              >
                Section Three
              </div>
              <div
                class="form-subheading"
              >
                Information about this section to help the user
              </div>
              <div
                class="field"
              >
                <div
                  class="control "
                >
                  <label
                    class="label inline-block "
                    for="text-1-section-3"
                  >
                    Text
                  </label>
                  <input
                    class="input is-primary"
                    data-test=""
                    id="text-1-section-3"
                    name="text-1-section-3"
                    placeholder="Some text here"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="control"
              >
                <label
                  class="label"
                >
                  Label for editor
                </label>
                <div
                  class="pell undefined "
                  data-test=""
                >
                  <div
                    class="pell-actionbar"
                  >
                    <button
                      class="pell-button"
                      title="Bold"
                      type="button"
                    >
                      <b>
                        B
                      </b>
                    </button>
                    <button
                      class="pell-button"
                      title="Italic"
                      type="button"
                    >
                      <i>
                        I
                      </i>
                    </button>
                    <button
                      class="pell-button"
                      title="Underline"
                      type="button"
                    >
                      <u>
                        U
                      </u>
                    </button>
                    <button
                      class="pell-button"
                      title="Strike-through"
                      type="button"
                    >
                      <strike>
                        S
                      </strike>
                    </button>
                    <button
                      class="pell-button"
                      title="Heading 1"
                      type="button"
                    >
                      <b>
                        H
                        <sub>
                          1
                        </sub>
                      </b>
                    </button>
                    <button
                      class="pell-button"
                      title="Heading 2"
                      type="button"
                    >
                      <b>
                        H
                        <sub>
                          2
                        </sub>
                      </b>
                    </button>
                    <button
                      class="pell-button"
                      title="Paragraph"
                      type="button"
                    >
                      ¶
                    </button>
                    <button
                      class="pell-button"
                      title="Quote"
                      type="button"
                    >
                      “ ”
                    </button>
                    <button
                      class="pell-button"
                      title="Ordered List"
                      type="button"
                    >
                      #
                    </button>
                    <button
                      class="pell-button"
                      title="Unordered List"
                      type="button"
                    >
                      •
                    </button>
                    <button
                      class="pell-button"
                      title="Code"
                      type="button"
                    >
                      &lt;/&gt;
                    </button>
                    <button
                      class="pell-button"
                      title="Horizontal Line"
                      type="button"
                    >
                      ―
                    </button>
                    <button
                      class="pell-button"
                      title="Link"
                      type="button"
                    >
                      🔗
                    </button>
                  </div>
                  <div
                    class="pell-content"
                    placeholder="Some text here"
                  />
                </div>
              </div>
            </div>
            <div
              class="form-section"
            >
              <div
                class="form-heading"
              >
                Section Four
              </div>
              <div
                class="form-subheading"
              >
                Information about this section to help the user
              </div>
              <div
                class="field"
              >
                <div
                  class="control"
                >
                  <label
                    class="label mb-2"
                    for="text"
                  >
                    Details
                  </label>
                  <textarea
                    class="textarea is-primary"
                    data-test=""
                    id="text"
                    name="primary"
                    placeholder="Some text here"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-heading"
        >
          Section Five
        </div>
        <div
          class="columns"
          data-test=""
        >
          <div
            class="column"
            data-test=""
          >
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission1"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission1"
                  >
                    Permission1
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission5"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission5"
                  >
                    Permission5
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="column"
            data-test=""
          >
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission2"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission2"
                  >
                    Permission2
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission6"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission6"
                  >
                    Permission6
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="column"
            data-test=""
          >
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission3"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission3"
                  >
                    Permission3
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission7"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission7"
                  >
                    Permission7
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="column"
            data-test=""
          >
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission4"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission4"
                  >
                    Permission4
                  </label>
                </div>
              </div>
            </div>
            <div
              class="field "
            >
              <div
                class="control"
              >
                <div
                  class="field field-checkbox"
                >
                  <input
                    class="checkbox"
                    data-test=""
                    id="Permission8"
                    type="checkbox"
                    value=""
                  />
                  <label
                    class="label"
                    for="Permission8"
                  >
                    Permission8
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="form-section"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
